# guiPMC

./: AG17RGBAImage.cxx  AG17RGBAImage.h  CMakeLists.txt  README.md  YK16GrayImage.cxx  YK16GrayImage.h  gPMC.cpp  gPMC.ggo  gPMC.ui  gPMC_UI.cxx  gPMC_UI.h  gPMC_commandline.hxx  gPMC_dcm_tools.hxx  main.cpp  qyklabel.cxx  scatterdatamodifier.cxx  scatterdatamodifier.h
cmake/: FindIPP.cmake
include/: goPMC.h
